--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5159",
+      "applicationUrl": "http://0.0.0.0:5134",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7134;http://localhost:5159",
+      "applicationUrl": "https://0.0.0.0:5134;https://0.0.0.0:7134",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
